test/compile_errors/err_break_value_labeled_block.w
//! expect-check-fail: break with a value is only valid for `loop`

fn main:
    'blk:
        break 'blk 1
